--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,12 @@ body {
 /* header*/
 
 #masterhead {
-    background:white;
+    background: whitesmoke;
     margin: 25px;
     overflow: auto;
     border-bottom: 2px solid white;
-    width: 100%
+    width: 100%;
+   
 }
 #logo {
     width: 250px;
@@ -46,7 +47,7 @@ nav a {
     color: black;
     margin-left: 15px;
     display: inline-block;
-    border-left: 1px solid white;
+    border-left: 1px solid black;
     padding-left: 30px;
     line-height: 10px
 }
@@ -77,14 +78,43 @@ img {
     margin-right: 25px;
 }
 .main-section {
-    background: #ffffff;
+    background: whitesmoke;
     padding: 30px;
     margin: 0 0 40 0;
     max-width: 600px;
     float: left;
     border: 1px solid white;
+    border-bottom: 
 
 }
+.sidebar {
+    background: whitesmoke;
+    padding: 30px;
+    width: 100%;
+    max-width: 270px;
+    float: right;
+    border: 1px solid white;
+    margin-bottom: 20px;
+  
 
+
+}
+.social {
+    width: 75px;
+    width: 75px;
+    margin-top: 10px;
+    margin-right: 15px;
+
+}
+footer {
+    background: whitesmoke;
+    padding: 30px;
+    clear: both;
+    border-top: 1px solid gray;
+    text-align: center;
+    font-size: 15px;
+    color: black;
+
+}
 
 
