--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,8 +128,39 @@ footer {
     margin: 1px 1px;
 }
 
-    
+/*contact/*/
 
+.contact-form ul {
+    margin-bottom: 20px;
+
+
+}
+.contact-form li {
+    margin-bottom: 10px;
+}
+
+label, input[type=text], input[type=email], textarea {
+    display: block;
+    width: 50%
+}
+    
+input[type=text], input[type=email], textarea {
+    height: 35px;
+    border: 1px solid black;
+    padding: 0 10px;
+    font-size: 14px;
+}
+textarea {
+    height: 200px;
+}
+input[type=submit] {
+    background: darkcyan;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 30px;
+
+    
+}
 
 
 
